5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1649_2711.log
== TEST (2019-04-06 22:40:20) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de oniibus: "))
vP = float(input("Digite o valor do passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:41:21) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de oniibus: "))
vP = float(input("Digite o valor do passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:42:16) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de oniibus: "))
vP = float(input("Digite o valor do passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:42:35) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de oniibus: "))
vP = float(input("Digite o valor do passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.127952
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:47:14) 
-- CODE:
valor = float(input("Digite valor: "))
quantidade_de_tickets_do_RU = int(input("Digite quantidade de Tickets do RU: "))
valor_dos_tickets = float(input("Digite o valor dos Tickets: "))
quantidade_de_passes_de_onibus = int(input("Digite a quantidade de passes de oniibus: "))
valor_dos_passes = float(input("Digite o valor do passes: "))
operacao = quantidade_de_tickets_do_RU + valor_dos_tickets + quantidade_de_passes_de_onibus + valor_dos_passes  
if(valor >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:47:36) 
-- CODE:
valor = float(input("Digite valor: "))
quantidade_de_tickets_do_RU = int(input("Digite quantidade de Tickets do RU: "))
valor_dos_tickets = float(input("Digite o valor dos Tickets: "))
quantidade_de_passes_de_onibus = int(input("Digite a quantidade de passes de oniibus: "))
valor_dos_passes = float(input("Digite o valor do passes: "))
operacao = quantidade_de_tickets_do_RU + valor_dos_tickets + quantidade_de_passes_de_onibus + valor_dos_passes  
if(valor >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.15769
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:50:55) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de oniibus: "))
vP = float(input("Digite o valor do passes: "))
operacao = qTru + vT + qPo + vP
if(valor >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(valor >= operacao):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:51:25) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de oniibus: "))
vP = float(input("Digite o valor do passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:51:52) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de oniibus: "))
vP = float(input("Digite o valor do passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:51:55) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de oniibus: "))
vP = float(input("Digite o valor do passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.196587
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:53:28) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de onibus: "))
vP = float(input("Digite o valor do passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.205783
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:53:56) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de onibus: "))
vP = float(input("Digite o valor dos passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.143902
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:54:08) 
-- CODE:
v = float(input("Digite valor: "))
qTru = int(input("Digite quantidade de Tickets do RU: "))
vT = float(input("Digite o valor dos Tickets: "))
qPo = int(input("Digite a quantidade de passes de onibus: "))
vP = float(input("Digite o valor dos passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:58:19) 
-- CODE:
v = float(input("Valor: "))
qTru = int(input("Quantidade de Tickets do RU: "))
vT = float(input("Valor dos Tickets: "))
qPo = int(input("Quantidade de passes de onibus: "))
vP = float(input("Valor dos passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.19649
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:58:45) 
-- CODE:
v = float(input("Valor: "))
qTru = int(input("Quantidade de Tickets do RU: "))
vT = float(input("Valor dos Tickets: "))
qPo = int(input("Quantidade de passes de onibus: "))
vP = float(input("Valor dos passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:59:29) 
-- CODE:
v = float(input("Valor: "))
qTru = int(input("Quantidade de Tickets do RU: "))
vT = float(input("Valor dos Tickets: "))
qPo = int(input("Quantidade de passes de onibus: "))
vP = float(input("Valor dos passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = " SUFICIENTE"
	print(mensagem)
else:
	mensagem = " INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:59:44) 
-- CODE:
v = float(input("Valor: "))
qTru = int(input("Quantidade de Tickets do RU: "))
vT = float(input("Valor dos Tickets: "))
qPo = int(input("Quantidade de passes de onibus: "))
vP = float(input("Valor dos passes: "))
operacao = qTru + vT + qPo + vP
if(v >= operacao):
	mensagem = " SUFICIENTE"
	print(mensagem)
else:
	mensagem = " INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.191277
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 23:01:14) 
-- CODE:
v = float(input("Valor: "))
qTru = int(input("Quantidade de Tickets do RU: "))
vT = float(input("Valor dos Tickets: "))
qPo = int(input("Quantidade de passes de onibus: "))
vP = float(input("Valor dos passes: "))
operacao = qTru + vT + qPo + vP
if(v > operacao):
	mensagem = " SUFICIENTE"
	print(mensagem)
else:
	mensagem = " INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.129329
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 23:01:20) 
-- CODE:
v = float(input("Valor: "))
qTru = int(input("Quantidade de Tickets do RU: "))
vT = float(input("Valor dos Tickets: "))
qPo = int(input("Quantidade de passes de onibus: "))
vP = float(input("Valor dos passes: "))
operacao = qTru + vT + qPo + vP
if(v > operacao):
	mensagem = " SUFICIENTE"
	print(mensagem)
else:
	mensagem = " INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 23:10:39) 
-- CODE:
v = float(input("Valor: "))
qTru = int(input("Quantidade de Tickets do RU: "))
vT = float(input("Valor dos Tickets: "))
qPo = int(input("Quantidade de passes de onibus: "))
vP = float(input("Valor dos passes: "))
operacao = ((qTru * vT) + (qPo * vP))
if(v >= operacao):
	mensagem = " SUFICIENTE"
	print(mensagem)
else:
	mensagem = " INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 23:11:05) 
-- CODE:
v = float(input("Valor: "))
qTru = int(input("Quantidade de Tickets do RU: "))
vT = float(input("Valor dos Tickets: "))
qPo = int(input("Quantidade de passes de onibus: "))
vP = float(input("Valor dos passes: "))
operacao = ((qTru * vT) + (qPo * vP))
if(v >= operacao):
	mensagem = " SUFICIENTE"
	print(mensagem)
else:
	mensagem = " INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.143745
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
